--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
   <div class="boxx">
     <ul type="none">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
   </div>
@@ -152,12 +152,8 @@
       </ul>
     </p>
   </article>
-
   <article class="text-item">
-    <h3>Swedish C- Level and D-Level(SFX-IT)</h3>
-    <p class= "subtitle">Aug 2019 –Feb 2020</p>
-   <br>
-    <h3>Software Development Academy</h3>
+  <h3>Software Development Academy</h3>
         <p class= "subtitle">Feb 2021 to May 2021</p>
         <p> <ul class="contact-links">
           <li>Programming Foundations (Java)</li>
@@ -169,6 +165,28 @@
         </ul>
       </p>
 </article>
+</div>
+</section>
+
+<section class="content">
+  <div class="grid">
+<article class="text-item">
+  <h3>C3L Academy,Tyreso</h3>
+    <p class= "subtitle">Aug 2019 –Feb 2020</p>
+   <p> <ul class="contact-links">
+      <li>Swedish C- Level and D-Level</li>
+    </ul>
+  </p>
+  </article>    
+
+   <article class="text-item">
+    <h3>NIIT</h3>
+    <p class= "subtitle">Sep 2020- Oct 2020</p>
+   <p> <ul class="contact-links">
+      <li>Programming in Java</li>
+    </ul>
+  </p>
+</article>    
 </div>
 </section>
 <hr/>
