--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <header>
   <div class="boxx">
     <ul type="none">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
   </div>
@@ -63,8 +63,24 @@
 
    <p>
     <h2>Website Link</h2>
-        <a href= "https://cakewebsite-f05ce.web.app"><i class="fas fa-mobile"></i>
+        <a href= "https://cakewebsite-f05ce.web.app">
             Munamii Cakery Website </a>
+        </p>
+<hr/>
+
+<h2>Table Creation Assignment</h2>
+<session class = "content">
+<div class= "grid">
+    <article class = "picture-item">
+        <img class="logo" src="./image/table.png" alt="Project ScreenShot" />
+    </article>
+</div>   
+</session>
+
+   <p>
+    <h2>Website Link</h2>
+        <a href= "https://sda9-49ea3.web.app">
+            Table Creation Assignment </a>
         </p>
 <hr/>
 
