Updated CV Website

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
           Around 2 years of relevant experience in developing software applications on several different engagements,
           primarily on Java based Web Applications.</li>
           <li> Trained in Java Technology </li>
-          <li> Good Knowledge in DataBase design.</li>
+          <li> Good Knowledge in Java,Oracle DataBase.</li>
           <li> Experience in back end development.</li>
           <li> Experience in using SQL and PL/SQL queries.</li>
           <li> Experience in using solving Production issues and database Support activities.</li>
@@ -117,7 +117,7 @@
             <li> Result oriented, self-starter and able to work with minimum guidance.</li> 
             <li> Good team player and good communication skills.</li>
             <li> Basic knowledge in different technologies like  Java script, 
-                 HTML,CSS,Visual Basic.Net,BootStrap,DOM,jquery,PL/SQL.</li>
+                 HTML,CSS,Visual Basic.Net,BootStrap,DOM,PL/SQL.</li>
             <li> Basic knowledge in Agile methodology.</li>
             <li> Active participation in organizational activities.</li>
             </ul>
