--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,103 +11,93 @@
 </head>
 
 <body>
-<header>
-  <div class="boxx">
-    <ul type="none">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-    </ul>
-  </div>
-</header>
+  <header>
+    <div class="boxx">
+      <ul type="none">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+      </ul>
+    </div>
+  </header>
 
-<body>
+  <body>
 
     <h2>ToDoList Application</h2>
-<session class = "content">
-    <div class= "grid">
-        <article class = "picture-item">
-                <img class="logo" src="./image/todo.png" alt="Project ScreenShot" />
-            </article>
-            </div>
-            <h3 >Project Details</h3>
-        <div class= "grid">
-        <p class = "text">       
-          The Application will allow a user to create new tasks, assign them a title and due date, time ,location,status,project
-          category and choose a project for that task to belong to.They will need to use a text based user interface via the
+    <session class="content">
+      <div class="grid">
+        <article class="picture-item">
+          <img class="logo" src="./image/todo.png" alt="Project ScreenShot" />
+        </article>
+      </div>
+      <h3>Project Details</h3>
+      <div class="grid">
+        <p class="text">
+          The Application will allow a user to create new tasks, assign them a title and due date, time
+          ,location,status,project
+          category and choose a project for that task to belong to.They will need to use a text based user interface via
+          the
           command-line. Once they are using the application, the user should be able to edit(update title,due date, time
-          ,location,status,project category in the task list),sort tasks by title, due date, time ,location,status, project
-          category in the task list, mark as done or remove tasks,list all tasks. 
-          They can search particular/group of tasks by Project category. 
-      </p>
-</article>
-
-    <article class = "picture-item">
-         <p class = "text">       
-          They can also quit and save the current task list to file,read the list of tasks from file and then
-          restart the application with the former state restored.The Integer value entered by the user is validated.If the user
-          enters the wrong data in the place of Integer Input the application will ask for the corrects Integer between 
-          the maximum and minimum value.
-      </p>
-
-    </article>
-</div> 
-</session>
-<hr/>
-<h2>Munamii Cakery Small Website</h2>
-<session class = "content">
-<div class= "grid">
-    <article class = "picture-item">
-        <img class="logo" src="./image/website.png" alt="Project ScreenShot" />
-    </article>
-</div>   
-</session>
-
-   <p>
-    <h2>Website Link</h2>
-        <a href= "https://cakewebsite-f05ce.web.app">
-            Munamii Cakery Website </a>
+          ,location,status,project category in the task list),sort tasks by title, due date, time ,location,status,
+          project
+          category in the task list, mark as done or remove tasks,list all tasks.
+          They can search particular/group of tasks by Project category.
         </p>
-<hr/>
+        </article>
 
-<h2>Table Creation Assignment</h2>
-<session class = "content">
-<div class= "grid">
-    <article class = "picture-item">
-        <img class="logo" src="./image/table.png" alt="Project ScreenShot" />
-    </article>
-</div>   
-</session>
+        <article class="picture-item">
+          <p class="text">
+            They can also quit and save the current task list to file,read the list of tasks from file and then
+            restart the application with the former state restored.The Integer value entered by the user is validated.If
+            the user
+            enters the wrong data in the place of Integer Input the application will ask for the corrects Integer
+            between
+            the maximum and minimum value.
+          </p>
 
-   <p>
+        </article>
+      </div>
+    </session>
+    <hr />
+
+    <h2>Table Creation Assignment</h2>
+    <session class="content">
+      <div class="grid">
+        <article class="picture-item">
+          <img class="logo" src="./image/table.png" alt="Project ScreenShot" />
+        </article>
+      </div>
+    </session>
+
+    <p>
     <h2>Website Link</h2>
-        <a href= "https://sda9-49ea3.web.app">
-            Table Creation Assignment </a>
-        </p>
-<hr/>
+    <a href="https://sda9-49ea3.web.app">
+      Table Creation Assignment </a>
+    </p>
+    <hr />
 
 
-  <footer class="footer">
-    <h2>Contact Information</h2>
-    <ul class="contact-links">
-      <li>
-        <a href= "tel: +46761588480"><i class="fas fa-mobile"></i>
-          Phone: +46 761588480</a>
-      </li>
-      <li>
-        <a href= "mailto: +46761588480"><i class="fas fa-envelope"></i>
-          EMail:sangeethamurugesan89@gmail.com</a>
-      </li>
-      <li>
-        <a href= "https://www.linkedin.com/in/sangeetha-m-b91426185/"> <i class="fab fa-linkedin-in"></i>
-        Linkedin: Sangeetha Murugesan </a>
-      </li>
-      <li>
-        <a href= "https://github.com/sangeetha-murugesan-sda9"
-        target="_blank"><i class="fab fa-github"></i>
-        GitHub: Sangeetha Murugesan</a>
-      </li>
-    </ul>
+    <footer class="footer">
+      <h2>Contact Information</h2>
+      <ul class="contact-links">
+        <li>
+          <a href="tel: +46761588480"><i class="fas fa-mobile"></i>
+            Phone: +46 761588480</a>
+        </li>
+        <li>
+          <a href="mailto: +46761588480"><i class="fas fa-envelope"></i>
+            EMail:sangeethamurugesan89@gmail.com</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/sangeetha-m-b91426185/"> <i class="fab fa-linkedin-in"></i>
+            Linkedin: Sangeetha Murugesan </a>
+        </li>
+        <li>
+          <a href="https://github.com/sangeetha-murugesan-sda9" target="_blank"><i class="fab fa-github"></i>
+            GitHub: Sangeetha Murugesan</a>
+        </li>
+      </ul>
 
-  </footer>
-</body>
+    </footer>
+  </body>
+
 </html>
